# Smart-Inventory-Management-System

./: .env  LOGBOOKs.md  Migrate.py  README.md  app.py  app2.py  pyproject.toml
lib/: graphs.py  history.py  line_count.py  stats.py  stocks.py  users.py
sqlqueries/: Diagram.mmd  Init.sql
static/: style.css
static/graphs/: category_dist_global.hash  inv_health_global.hash  sales_trend_global.hash
templates/: add_product.html  add_user.html  athlete_list.html  edit.html  edit_product.html  edit_users.html  index.html  login.html  product_view.html  statistics.html  stock_list.html  terminal.html  users.html
templates/partials/: athlete_items.html  devteam.html  navbar.html  ownerdev.html
