[project]
name = "Athlete-db"
version = "0.1.0"
description = "Training recovery dashboard idk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=47.0.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-mysqldb>=2.0.0",
    "gunicorn>=25.3.0",
    "mariadb>=1.1.14",
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "pymysql>=1.1.2",
]
